se mejoraron muchos aspectos

--- a/Registro/registro.html
+++ b/Registro/registro.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="../estilo.css">
     <link rel="stylesheet" href="registro.css">
 </head>
-<body>
-    <header>
-    </header>
+<body class="registro-page">
+    <header></header>
 
     <div class="container">
         <main>
@@ -32,7 +31,7 @@
                         <label for="confirm-password">Confirmar contraseña:</label>
                         <input type="password" id="confirm-password" name="confirm-password" required>
                     </div>
-                    <button type="submit">Registrarse</button>
+                    <button id="boton" type="submit">Registrarse</button>
                 </form>
             </section>
         </main>
