--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -30,7 +30,7 @@
                     <label for="mensaje">Mensaje:</label>
                     <textarea id="mensaje" name="mensaje" required></textarea>
                 </div>
-                <button type="submit">Enviar mensaje</button>
+                <button id="boton" type="submit">Enviar mensaje</button>
             </form>
         </main>
     </div>
