--- a/ASITENTE/asistente.html
+++ b/ASITENTE/asistente.html
@@ -18,6 +18,7 @@
             </div>
         </main>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="../header_Footer_Global/header_Footer.js"></script>
     <script src="gemini_log.js"></script>
     
