web con el juego prototipo_1

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wiki de Táctica Pixel</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
+
 <body>
     <header></header>
 
@@ -15,12 +17,15 @@
                 <h2>Bienvenido a la Wiki</h2>
                 <div class="section-content">
                     <div class="section-text">
-                        <p>Explora nuestro mundo de estrategia y píxeles. Aquí encontrarás toda la información que necesitas sobre nuestro juego táctico estilo pixel.</p>
+                        <a name="" id="" class="btn btn-primary " href="./JUego_Prototipo/Beta.html" role="button">juego</a>
+
+                        <p>Explora nuestro mundo de estrategia y píxeles. Aquí encontrarás toda la información que
+                            necesitas sobre nuestro juego táctico estilo pixel.</p>
                     </div>
                     <img src="imagenes index/Designer.png" alt="Imagen de introducción" class="section-image">
                 </div>
             </section>
-            
+
             <section id="destacado" class="section-block">
                 <h2>Contenido Destacado</h2>
                 <div class="section-content">
@@ -38,7 +43,8 @@
             <section id="imagenes-proyecto" class="section-block">
                 <h2>Imágenes del Proyecto</h2>
                 <div class="galeria">
-                    <img src="imagenes index/Captura de pantalla de 2024-08-03 22-45-32.png" alt="Descripción de la imagen 1">
+                    <img src="imagenes index/Captura de pantalla de 2024-08-03 22-45-32.png"
+                        alt="Descripción de la imagen 1">
                     <img src="ruta-a-tu-imagen-2.jpg" alt="Descripción de la imagen 2">
                     <img src="ruta-a-tu-imagen-3.jpg" alt="Descripción de la imagen 3">
                     <!-- Añade más imágenes según sea necesario -->
@@ -51,4 +57,5 @@
 
     <script src="header_Footer_Global/header_Footer.js"></script>
 </body>
+
 </html>
