--- a/Registro/registro.html
+++ b/Registro/registro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro - Wiki de Táctica Pixel</title>
+    <title>Registro - Orbiton</title>
     <link rel="stylesheet" href="../estilo.css">
     <link rel="stylesheet" href="registro.css">
 </head>
